[package]
name = "yul"
version = "0.1.1"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
edition = "2021"
homepage = "https://github.com/recmo/yul"
repository = "https://github.com/recmo/yul"
description = "Yul language tools"
keywords = ["ethereum", "yul", "compiler", "evm"]
categories = ["compilers", "cryptography::cryptocurrencies"]
readme = "Readme.md"
license = "MIT"

[workspace]
members = [
    "parser",
    "compiler",
    "language-server",
]

[dependencies]
yul-parser = { version = "0.1.1", path = "parser" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
