[package]
name = "yulc"
description = "Yul compiler"
version = "0.1.1"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
repository = "https://github.com/recmo/yul"
keywords = ["ethereum", "yul"]
categories = ["blockchain"]
readme = "Readme.md"
license = "MIT"
edition = "2021"

[dependencies]
cli-batteries = { version = "0.1.1", features = [ "rand", "rayon" ] }
tokio = { version = "1.18", features = [ "fs", "io-util" ] }
structopt = "0.3"
eyre = "0.6"
yul = { version = "0.1.0", path = ".." }

[dev-dependencies]
proptest = { version = "1.0" }
tracing-test = "0.2"

[build-dependencies]
cli-batteries = "0.1.1"
