[package]
name = "yul-language-server"
description = "Yul implementation of the Language Server Protocol"
version = "0.0.1"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
repository = "https://github.com/recmo/yul"
keywords = ["ethereum", "yul", "lsp"]
categories = ["blockchain"]
readme = "Readme.md"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.34"
flexi_logger = "0.16.1"
log = "0.4.11"
lsp-server = "0.4.1"
lsp-types = "0.83.0"
serde = "1.0.116"
serde_json = "1.0.59"
