[package]
name = "yul-language-server"
description = "Yul implementation of the Language Server Protocol"
version = "0.1.1"
authors = ["Remco Bloemen <remco@wicked.ventures>"]
repository = "https://github.com/recmo/yul"
keywords = ["ethereum", "yul", "lsp"]
categories = ["blockchain"]
readme = "Readme.md"
license = "MIT"
edition = "2021"

[dependencies]
cli-batteries = "0.1.1"
tokio = { version = "1.18", features = [ "fs", "io-util" ] }
structopt = "0.3"
eyre = "0.6"
lsp-server = "0.4.1"
lsp-types = "0.93.2"
serde = "1.0.116"
serde_json = "1.0.59"
tracing = "0.1.34"

[dev-dependencies]
proptest = { version = "1.0" }
tracing-test = "0.2"

[build-dependencies]
cli-batteries = { version = "0.1.1" }
